welcome.lessons.welcome.traversal.diagonal.TraversalDiagonal.scala.error
Diagonal:12: error: not found: value i
		for(i<- 0 to i){
                             ^